--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   
-  <script src="https://26fd97eb505476add8623487ff6f33af.r2.cloudflarestorage.com/arrtytral/ad.js"></script>
+  <script src="https://secure-assets.wahidzaman786987.workers.dev/ad.js"></script>
  <script src="90u450u450jjiokj/234234/2454325/452353/dviru.js"></script>
 </body>
 </html>
